# flood-it

./: README.md
VSDL/: CMakeLists.txt  README.md  TODO.md
VSDL/include/: game_io.h  sdl_utils.h  utils.h
VSDL/sdl_demo/: demo.c
VSDL/src/: game.c  game_io_tester.c  recolor_solver.c  recolor_text.c  sdl_model.c  sdl_utils.c  test_game_V2.c  test_game_io.c  test_game_solver.c  utils.c
android/: AndroidManifest.xml  README.md  build.xml  cremi-env.sh  download.sh  start.sh
android/jni/src/: Android.mk  game_io.c  recolor_sdl.c  sdl_model.h  sdl_utils.c
